<resources>
    <string name="app_name">To-do-app</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="addTaskBtn">Add Task</string>
    <string name="viewTaskBtn">View Tasks</string>
    <string name="addTask">Task Name</string>
    <string name="taskDesc">Task Description</string>
    <string name="saveTaskBtn">Save Task</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_description">Task Description</string>
    <string name="task_name">Task Name</string>
    <string name="save_task">Add</string>
    <string name="emailHint">Email</string>
    <string name="logout">Log out</string>
    <string name="tasks_list">Tasks will be listed here</string>
    <string name="myApp_title">Remindo</string>
    <string name="task_title">Task Title</string>
    <string name="task_description_card">Task Description</string>
    <string name="task_title_card">Task Title</string>
    <string name="my_tasks">My Tasks</string>
    <string name="edit_task">Edit Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_title_edit">Task Title</string>
    <string name="task_description_edit">Task Description</string>
    <string name="update_task">Update Task</string>
    <string name="taskflo">TaskFlo</string>
    <string name="email_registration">Email</string>
    <string name="password_registration">Password</string>
    <string name="confirm_password_registration">Confirm password</string>
    <string name="register_button_popup">Register</string>
    <string name="register_title">Create an account</string>

    <string-array name="importance_levels">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>

    <string-array name="sorting_options">
        <item>Sort by Due Date</item>
        <item>Sort by Importance</item>
    </string-array>
</resources>