<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="18dp"
    android:background="@drawable/ocean_blue_copy_space_abstract_paper_waves">
    <TextView
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register_title"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/emailRegistration"
        android:inputType="textEmailAddress"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/email_registration"/>

    <EditText
        android:id="@+id/passwordRegistration"
        android:inputType="textPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/password_registration"/>

    <EditText
        android:id="@+id/confirmPassRegistration"
        android:inputType="textPassword"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password_registration"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_marginTop="18dp"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:text="@string/register_button_popup"
        android:backgroundTint="@color/title_dark_cherry"/>
</LinearLayout>