<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"

    android:layout_marginTop="40dp"
    android:background="@color/backgroundColor">

    <EditText
        android:id="@+id/edit_task_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:fontFamily="@font/oxygen"
        android:hint="@string/task_title_edit"/>

    <EditText
        android:id="@+id/edit_task_description"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/oxygen"
        android:hint="@string/task_description_edit"
        android:layout_marginTop="8dp"/>

    <DatePicker
        android:id="@+id/datepicker_due_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:calendarViewShown="true"
        android:datePickerMode="spinner" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Update Importance Level"/>
    <Spinner
        android:id="@+id/spinnerImportance"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:entries="@array/importance_levels" />

    <Button
        android:id="@+id/button_update_task"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/update_task"
        android:fontFamily="@font/oxygen"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/buttonColor"
        android:textColor="@color/textColor"/>
</LinearLayout>