<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/card"
    tools:context=".MenuActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="40dp">

        <Button
            android:id="@+id/add_task_button"
            android:textSize="12sp"
            android:layout_width="120dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:fontFamily="@font/oxygen"
            android:backgroundTint="@color/title_dark_cherry"
            android:text="@string/addTaskBtn"/>

        <Button
            android:id="@+id/view_task_button"
            android:textSize="12sp"
            android:layout_width="120dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:fontFamily="@font/oxygen"
            android:backgroundTint="@color/title_dark_cherry"
            android:text="@string/viewTaskBtn"/>

        <Button
            android:id="@+id/logout_button"
            android:textSize="12sp"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:textColor="@color/grey"
            android:fontFamily="@font/oxygen"
            android:backgroundTint="@color/title_dark_cherry"
            android:text="@string/logout" />
    </LinearLayout>
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"/>


</LinearLayout>